--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "firebase": "^12.2.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "moment": "^2.30.1",
